@@ -14,7 +14,11 @@ License for more details.
 */
 #include "eba-test-private-utils.h"
 
+#ifndef EBA_SKIP_ENDIAN
 int test_toggle(int verbose, enum eba_endian endian)
+#else
+int test_toggle(int verbose)
+#endif
 {
 	int failures;
 	size_t i;
@@ -31,11 +35,16 @@ int test_toggle(int verbose, enum eba_endian endian)
 
 	eba.bits = bytes;
 	eba.size_bytes = 2;
+#ifndef EBA_SKIP_ENDIAN
 	eba.endian = endian;
 
 	expected[(endian == eba_big_endian) ? 1 : 0] = (1U << 7);
 	expected[(endian == eba_big_endian) ? 0 : 1] =
 	    ((1U << (9 - 8)) | (1U << (10 - 8)));
+#else
+	expected[0] = (1U << 7);
+	expected[1] = ((1U << (9 - 8)) | (1U << (10 - 8)));
+#endif
 
 	failures += check_int(eba_get(&eba, 0), 0);
 	failures += check_int(eba_get(&eba, 1), 0);
@@ -177,7 +186,9 @@ int test_toggle_all(int verbose)
 
 	eba.bits = bytes;
 	eba.size_bytes = 10;
+#ifndef EBA_SKIP_ENDIAN
 	eba.endian = eba_endian_little;
+#endif
 
 	expected[0] = 4;
 	expected[1] = 6;
@@ -208,8 +219,12 @@ int main(int argc, char **argv)
 
 	failures = 0;
 
+#ifndef EBA_SKIP_ENDIAN
 	failures += test_toggle(v, eba_endian_little);
 	failures += test_toggle(v, eba_big_endian);
+#else
+	failures += test_toggle(v);
+#endif
 	failures += test_toggle_all(v);
 
 	if (failures) {
